force-app/main/default/objects/SME_Accounts__c/fields/Billing_Address_If_Different_from_Home__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_If_Different_from_Home__c</fullName>
    <label>Billing Address (If Different from Home)</label>
    <type>TextArea</type>
</CustomField>