force-app/main/default/objects/SME_Accounts__c/fields/CREATEDBY_MIGRATION__c.field-meta.xml
<CustomField>
    <fullName>CREATEDBY_MIGRATION__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CREATEDBY_MIGRATION</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>SME Customers</relationshipLabel>
    <relationshipName>SME_Customers</relationshipName>
    <type>Lookup</type>
</CustomField>