force-app/main/default/objects/SME_Accounts__c/fields/Data_Product_3G_4G_LTE__c.field-meta.xml
<CustomField>
    <fullName>Data_Product_3G_4G_LTE__c</fullName>
    <label>Data Product (3G &amp; 4G/LTE)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Data Smart - 800MB</fullName>
            </value>
            <value>
                <fullName>Data Smart Plus - 1.6GB</fullName>
            </value>
            <value>
                <fullName>Data Light - 3.1GB</fullName>
            </value>
            <value>
                <fullName>Data Active - 5GB</fullName>
            </value>
            <value>
                <fullName>Data Heavy - 7.6GB</fullName>
            </value>
            <value>
                <fullName>Data Max - 16.4GB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>