force-app/main/default/objects/SME_Accounts__c/fields/Digicel_Country__c.field-meta.xml
<CustomField>
    <fullName>Digicel_Country__c</fullName>
    <formula>TEXT( Owner:User.Digicel_Country__c )</formula>
    <label>Digicel Country</label>
    <type>Text</type>
</CustomField>