force-app/main/default/objects/SME_Accounts__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Email Address</label>
    <type>Checkbox</type>
</CustomField>