force-app/main/default/objects/SME_Accounts__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Email Address</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>