force-app/main/default/objects/SME_Accounts__c/fields/Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>Sales_Person__c</fullName>
    <label>Sales Person</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alex Tioni</fullName>
            </value>
            <value>
                <fullName>Andy Kenwal</fullName>
            </value>
            <value>
                <fullName>Andy Salatum</fullName>
            </value>
            <value>
                <fullName>Andy Steven</fullName>
            </value>
            <value>
                <fullName>Benjamin Kupal</fullName>
            </value>
            <value>
                <fullName>Cathy Peko</fullName>
            </value>
            <value>
                <fullName>Daniel Polon</fullName>
            </value>
            <value>
                <fullName>Douglas Niakra</fullName>
            </value>
            <value>
                <fullName>Doulos Boga</fullName>
            </value>
            <value>
                <fullName>Emmanuel Mulvivoa</fullName>
            </value>
            <value>
                <fullName>Gabriel Kepo</fullName>
            </value>
            <value>
                <fullName>Graham Paulus</fullName>
            </value>
            <value>
                <fullName>Jayson Irau</fullName>
            </value>
            <value>
                <fullName>Jethro Webb</fullName>
            </value>
            <value>
                <fullName>Keith Kipma</fullName>
            </value>
            <value>
                <fullName>Lambert Buasi</fullName>
            </value>
            <value>
                <fullName>Mathew Alois</fullName>
            </value>
            <value>
                <fullName>Michael Allan Melachon</fullName>
            </value>
            <value>
                <fullName>Molly Wasip</fullName>
            </value>
            <value>
                <fullName>Reka Pake</fullName>
            </value>
            <value>
                <fullName>Robin Kerae</fullName>
            </value>
            <value>
                <fullName>Rodney Hipo</fullName>
            </value>
            <value>
                <fullName>Steven Farapo</fullName>
            </value>
            <value>
                <fullName>Tomana Tupas</fullName>
            </value>
            <value>
                <fullName>Tony Kele</fullName>
            </value>
            <value>
                <fullName>Hillary Wange</fullName>
            </value>
            <value>
                <fullName>Nerbert Wasi</fullName>
            </value>
            <value>
                <fullName>Nakon Barnabas</fullName>
            </value>
            <value>
                <fullName>Omar Parkop</fullName>
            </value>
            <value>
                <fullName>David Aivia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>