force-app/main/default/objects/SME_Accounts__c/fields/Security_Question__c.field-meta.xml
<CustomField>
    <fullName>Security_Question__c</fullName>
    <label>Security Question</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mothers Maiden Name</fullName>
            </value>
            <value>
                <fullName>First Pet&apos;s Name</fullName>
            </value>
            <value>
                <fullName>Your Favourite Colour</fullName>
            </value>
            <value>
                <fullName>Your Fathers Birthday</fullName>
            </value>
            <value>
                <fullName>Your Favourite Animal</fullName>
            </value>
            <value>
                <fullName>Your Favourite Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>