force-app/main/default/objects/SME_Accounts__c/fields/Subscribe_to_Digicel_SME_Offers__c.field-meta.xml
<CustomField>
    <fullName>Subscribe_to_Digicel_SME_Offers__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Subscribe to Digicel SME Offers</label>
    <type>Checkbox</type>
</CustomField>