force-app/main/default/objects/SME_Accounts__c/fields/Telephone_Number__c.field-meta.xml
<CustomField>
    <fullName>Telephone_Number__c</fullName>
    <label>Telephone Number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>