force-app/main/default/objects/SME_Accounts__c/recordTypes/SME_Service_Agreements.recordType-meta.xml
<RecordType>
    <fullName>SME_Service_Agreements</fullName>
    <active>true</active>
    <label>SME Service Agreements</label>
</RecordType>